@@ -91,7 +91,7 @@ itanium | itanium2)
   test_cpu=ia64 ;;
 pentium | pentiummmx | pentiumpro | pentium[234m] | k[56] | k6[23] | geode | athlon | viac3* | nano)
   test_cpu=i386 ;;
-athlon64 | atom | core2 | opteron)
+athlon64 | atom | core2 | corei | opteron)
   test_cpu=x86_64 ;;
 power[2-9] | power2sc)
   test_cpu=power ;;
