@@ -1,0 +1,73 @@
+/* PowerPC970 gmp-mparam.h -- Compiler/machine parameter header file.
+
+Copyright 2008, 2009 Free Software Foundation, Inc.
+
+This file is part of the GNU MP Library.
+
+The GNU MP Library is free software; you can redistribute it and/or modify
+it under the terms of the GNU Lesser General Public License as published by
+the Free Software Foundation; either version 3 of the License, or (at your
+option) any later version.
+
+The GNU MP Library is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
+License for more details.
+
+You should have received a copy of the GNU Lesser General Public License
+along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
+
+#define BITS_PER_MP_LIMB 64
+#define BYTES_PER_MP_LIMB 8
+
+
+/* Generated by tuneup.c, 2009-11-27, gcc 4.0 */
+
+#define MUL_TOOM22_THRESHOLD             16
+#define MUL_TOOM33_THRESHOLD             62
+#define MUL_TOOM44_THRESHOLD            136
+
+#define SQR_BASECASE_THRESHOLD            8
+#define SQR_TOOM2_THRESHOLD              32
+#define SQR_TOOM3_THRESHOLD              65
+#define SQR_TOOM4_THRESHOLD             145
+
+#define MUL_FFT_TABLE  { 336, 800, 1728, 2816, 7168, 20480, 81920, 327680, 0 }
+#define MUL_FFT_MODF_THRESHOLD          336
+#define MUL_FFT_THRESHOLD              5248
+
+#define SQR_FFT_TABLE  { 272, 672, 1600, 2816, 7168, 20480, 81920, 327680, 786432, 0 }
+#define SQR_FFT_MODF_THRESHOLD          272
+#define SQR_FFT_THRESHOLD              2944
+
+#define MULLOW_BASECASE_THRESHOLD         5
+#define MULLOW_DC_THRESHOLD              35
+#define MULLOW_MUL_N_THRESHOLD        10292
+
+#define MULMOD_BNM1_THRESHOLD            12
+
+#define DC_DIV_QR_THRESHOLD              29
+#define REDC_1_TO_REDC_N_THRESHOLD       96
+
+#define MATRIX22_STRASSEN_THRESHOLD      11
+#define HGCD_THRESHOLD                   93
+#define GCD_DC_THRESHOLD                241
+#define GCDEXT_DC_THRESHOLD             273
+#define JACOBI_BASE_METHOD                1
+
+#define MOD_1_NORM_THRESHOLD              0  /* always */
+#define MOD_1_UNNORM_THRESHOLD            0  /* always */
+#define MOD_1_1_THRESHOLD                 6
+#define MOD_1_2_THRESHOLD                 9
+#define MOD_1_4_THRESHOLD                23
+#define USE_PREINV_DIVREM_1               0
+#define USE_PREINV_MOD_1                  0
+#define DIVEXACT_1_THRESHOLD              0  /* always (native) */
+#define MODEXACT_1_ODD_THRESHOLD      MP_SIZE_T_MAX  /* never */
+
+#define GET_STR_DC_THRESHOLD             12
+#define GET_STR_PRECOMPUTE_THRESHOLD     23
+#define SET_STR_DC_THRESHOLD            650
+#define SET_STR_PRECOMPUTE_THRESHOLD   1781
+
+/* Tuneup completed successfully, took 176 seconds */
