@@ -1,5 +1,17 @@
 2009-11-27  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/x86_64/corei/gmp-mparam.h: New file.
+	* mpn/x86_64/core2/gmp-mparam.h: Now for just core2.
+	* mpn/powerpc64/mode64/p3/gmp-mparam.h: New file.
+	* mpn/powerpc64/mode64/p4/gmp-mparam.h: New file.
+	* mpn/powerpc64/mode64/p5/gmp-mparam.h: New file.
+
+	* config.guess: Return "corei" for core i7 and core i5.
+	* config.sub: Recognise "corei".
+	* acinclude.m4 (X86_64_PATTERN): Add corei.
+	* configure.in (powerpc): Set up more CPU-specific paths.
+	(x86): Handle corei.
+
 	* mpz/powm.c: Allow input operand overlap also when exponent = 1.
 	Misc cleanups.
 
